[Add]  Select sheet

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" type="image/png" href="./images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Modern PWA Weather React Application" />
+  <meta name="description" content="Managy Application" />
   <link rel="apple-touch-icon" href="./images/logo.png" />
   <link rel="manifest" href="./manifest.json" />
-  <title>Weather App</title>
+  <title>Managy App</title>
 </head>
 
 <body style="padding : 0 ; margin : 0">
