--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/png" href="./images/logo.png" />
+  <link rel="icon" type="image/png" href="./images/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Managy Application" />
-  <link rel="apple-touch-icon" href="./images/logo.png" />
+  <link rel="apple-touch-icon" href="./images/logo.jpg" />
   <link rel="manifest" href="./manifest.json" />
   <title>Managy App</title>
 </head>
