--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,15 @@
   <meta name="description" content="Managy Application" />
   <link rel="apple-touch-icon" href="./images/logo.jpg" />
   <link rel="manifest" href="./manifest.json" />
+
   <title>Managy App</title>
 </head>
 
 <body style="padding : 0 ; margin : 0">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
@@ -24,6 +27,7 @@
       })
     }
   </script>
+
 </body>
 
 </html>
