--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="./images/logo.jpg" />
   <link rel="manifest" href="./manifest.json" />
 
-  <title>Managy App</title>
+  <title>Catchy-JP</title>
 </head>
 
 <body style="padding : 0 ; margin : 0">
